# bora-oracle

./: .gitignore  bora-finance.cabal
app/: oracle-pab.hs
src/Oracle/: Core.hs  PAB.hs
