Cabal-Version:      2.4
Name:               bora-finance
Version:            0.0.1
Author:             Hilgard van Rooyen 
Maintainer:         hilgardvr@gmail.com
Build-Type:         Simple

library
  hs-source-dirs:      src
  exposed-modules:     Oracle.Core
                       Oracle.Funds
                       Oracle.PAB
                      --  Oracle.Swap
                       --Oracle.Test
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable oracle-pab
  main-is: oracle-pab.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , data-default
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , bora-finance
                    --  , plutus-pioneer-program-week06
                     , plutus-use-cases
                     , text

--executable oracle-client
--  main-is: oracle-client.hs
--  hs-source-dirs:      app
--  ghc-options:         -Wall
--  build-depends:       base ^>= 4.14.1.0
--                     , bytestring
--                     , regex-tdfa ^>= 1.3.1.0
--                     , req ^>= 3.9.0
--                     , text
--                     , uuid

-- executable swap-client
--  main-is: swap-client.hs
--  hs-source-dirs:      app
--  ghc-options:         -Wall
--  build-depends:       aeson
--                     , base ^>= 4.14.1.0
--                     , plutus-ledger
--                     , plutus-pab
--                     , plutus-pioneer-program-week06
--                     , req ^>= 3.9.0
--                     , text
--                     , uuid
